<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frogoboxinc"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_title_big_24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/container_footer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/dimen_big_super_24dp"
        android:paddingStart="@dimen/dimen_big_super_24dp"
        android:paddingTop="@dimen/dimen_big_16dp"
        android:paddingBottom="@dimen/dimen_big_16dp"
        android:background="@color/colorPrimary"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/dimen_weight"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorTextWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_aboutus_saran1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small_10sp"
                android:textColor="@color/colorTextWhite"
                android:text="@string/text_aboutus_saran2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small_10sp"
                android:textColor="@color/colorTextWhite"
                android:text="@string/frogobox_email"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="@dimen/dimen_weight"
            android:layout_weight="1"
            android:gravity="end"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="@color/colorTextWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small_10sp"
                android:textColor="@color/colorTextWhite"
                android:text="@string/frogobox"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_small_10sp"
                android:textColor="@color/colorTextWhite"
                android:text="@string/text_aboutus_copyright"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>