<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.SplashScreenActivity"
    android:background="@color/colorPrimary"
    android:padding="@dimen/dimen_big">

    <LinearLayout
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/app_tittle_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@color/colorTextWhite"
            android:textStyle="bold"
            android:textSize="35sp"/>

        <TextView
            android:textColor="@color/colorTextWhite"
            android:text="@string/frogobox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progress_bar"
        android:textColor="@color/colorTextWhite"
        android:text="@string/dicoding"
        android:textSize="12sp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/progress_text"
        android:layout_centerHorizontal="true"
        style="?android:progressBarStyleHorizontal"
        android:layout_marginLeft="@dimen/dimen_jumbo"
        android:layout_marginRight="@dimen/dimen_jumbo" />

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorTextWhite"
        android:text="@string/text_splash_loading"
        android:textSize="12sp"/>

</RelativeLayout>